# personalsite

./: next.config.mjs  package-lock.json  package.json  skills-lock.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
.agents/skills/interface-craft/: SKILL.md
.agents/skills/interface-sculpture-icons/: SKILL.md
.agents/skills/michael-interface-taste/: SKILL.md
.agents/skills/svg-scene-positions/: SKILL.md
.claude/skills/site-design/: SKILL.md
.next/: app-build-manifest.json  trace
.next/cache/: .rscinfo
.next/server/: app-paths-manifest.json  server-reference-manifest.js  server-reference-manifest.json  webpack-runtime.js
.next/server/app/: page.js  page_client-reference-manifest.js
.next/server/vendor-chunks/: @babel.js  @react-three.js  @swc.js  accessor-fn.js  d3-array.js  d3-binarytree.js  d3-dispatch.js  d3-force-3d.js  d3-octree.js  d3-quadtree.js  d3-scale-chromatic.js  d3-scale.js  d3-timer.js  data-bind-mapper.js  framer-motion.js  internmap.js  jerrypick.js  jotai.js  kapsule.js  lodash-es.js  motion.js  next.js  ngraph.events.js  ngraph.forcelayout.js  ngraph.graph.js  (+12 more)
public/: neptume.avif
research-harness(deepagents)/: .gitignore  README.md  autore  autore-deep  pyproject.toml  setup.cfg
research-harness(deepagents)/examples/corpus/: research_corpus.json
research-harness(deepagents)/research_deepagents/: __init__.py  agent.py  cli.py  orchestrator.py  schemas.py  search.py  store.py
research-harness(deepagents)/tests/: test_smoke.py
src/app/: blogs.tsx  globals.css  layout.tsx  loading.tsx  navbar.tsx  page.tsx
(+871 files in other folders)
